<?xml version="1.0" encoding="utf-8"?>
<!-- This is a primitive example showing the different types of preferences available. -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<ListPreference
		android:key="maps_dir"
		android:title="@string/map_dir_title"
		android:summary="@string/map_dir_summary" />

	<PreferenceScreen
			android:title="@string/poisource_title"
			android:summary="@string/poisource_summary"
		>
		<EditTextPreference
			android:key="poilist_preference"
			android:defaultValue="@string/poilist_default_url"
			android:title="@string/poilist_url_title"
			android:summary="@string/poilist_url_summary"
			android:dialogTitle="@string/poilist_url_edit_title" />
	
		<EditTextPreference
			android:key="username_preference"
			android:defaultValue=""
			android:title="@string/poilist_username_title"
			android:summary="@string/poilist_username_summary"
			android:dialogTitle="@string/poilist_username_edit_title" />
	
		<EditTextPreference
			android:key="password_preference"
			android:defaultValue=""
			android:title="@string/poilist_password_title"
			android:summary="@string/poilist_password_summary"
			android:dialogTitle="@string/poilist_password_edit_title"
			android:password="true" />
	</PreferenceScreen>
		
	<PreferenceScreen
			android:title="@string/poiicon_title"
			android:summary="@string/poiicon_summary"
		>
		<ListPreference
			android:key="poiicon_size_preference"
	        android:title="@string/poiicon_size_title"
	        android:summary="@string/poiicon_size_summary"
	        android:defaultValue="@string/poiicon_default_size"
	        android:entries="@array/poiicon_size_list_entries"
	        android:entryValues="@array/poiicon_size_list_values" 
	    />
	    
	    <ListPreference
			android:key="poiicon_bpp_preference"
	        android:title="@string/poiicon_bpp_title"
	        android:summary="@string/poiicon_bpp_summary"
	        android:defaultValue="@string/poiicon_default_bpp"
	        android:entries="@array/poiicon_bpp_list_entries"
	        android:entryValues="@array/poiicon_bpp_list_values" 
	    />
	</PreferenceScreen>

	<Preference
		android:negativeButtonText="@null"
		android:key="about_poiman"
		android:title="@string/about_title"
		android:summary="@string/about_summary"
		/>

</PreferenceScreen>